src/renderer/css/style.css
.history-item {
  position: relative; /* Enables absolute positioning for the button */
  margin-bottom: 5px; /* Space between items */
  padding: 5px;
  background-color: #f9f9f9;
  border: 1px solid #ddd;
  /* border-radius: 5px; */
  display: flex;
  width: 100%;
}

.history-content {
  display: flex;
  flex-direction: column;
  width: 100%;
  justify-content: space-between;
  margin-left: auto;
}

.history-text {
  /* display: inline-block; */
  min-height: 2em;
  line-height: 1em;
  white-space: pre-wrap;
  max-width: calc(100% - 60px); /* Ensure the text doesn't overlap the button */
}
.history-date {
  /* display: inline-block; */
  max-width: calc(100% - 60px);
  font-size: 10px; /* Smaller font size */
  color: grey; /* Grey color for less emphasis */
}

.history-item-button-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-left: auto;
}

.history-item-button {
  font-size: 20px;
  width: 20px;
  height: 20px;
  background-color: rgba(0, 0, 0, 0.1);
  color: white;
  border: none;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
}

.history-item-button:hover {
  background-color: #45a049;
}


body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
}

.container {
  display: flex;
  height: 100vh; /* 100% of the viewport height */
  overflow: hidden; /* Prevent the entire container from scrolling */
}

/* .column { */
/*     flex: 1;  /\* Each column gets equal width *\/ */
/*     overflow-y: auto;  /\* Allow vertical scrolling if content exceeds the height *\/ */
/*     background-color: #f0f0f0; */
/*     padding: 5px; */
/*     box-sizing: border-box; */
/* } */
.column-left,
.column-right {
    padding: 5px;
    height: 100%;
}

.column-left {
    background-color: #f0f0f0;
    overflow-y: auto;  /* Allow vertical scrolling if content exceeds the height */
    width:50%;
}

.column-right {
    background-color: #e0e0e0;
    width: 50%;
    height: 100vh; /* Make container take full height of the screen */
    display: flex;
    flex-direction: column;
}

.column-resize-bar {
    cursor: ew-resize;
    background-color: #888;
    width: 2px;
    height: 100%;
    transition: background-color 0.3s;
}

.resize-bar:hover {
    background-color: #555;
}

.column-controls {
    display: flex;
    padding-bottom: 5px;
    height: 5%;
}
#searchInput {
    flex: 1;
}

#promptInput {
    flex: 2;
    margin-right: 5px; /* Space between items */
}

#editor {
  flex-grow: 1;
  overflow: hidden;
  position: relative;
}
.cm-editor {
  height: 100%;
  overflow-x: auto;
  padding-bottom: 10px;
}

/* .content { */
/*     background-color: #fff; */
/*     width: 100%; */
/*     height: 100vh; */
/*     padding: 15px; */
/*     border-radius: 8px; */
/*     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
/* } */

